[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "chat-langchain"
version = "0.0.1"
authors = [
  { name="Chunyou Peng", email="chunyoupeng@gmail.com" },
]
description = "A small package for chat langchain warpper"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"